--- a/refreshExamp/View/taCell.xib
+++ b/refreshExamp/View/taCell.xib
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="taCell" rowHeight="85" id="0Ct-RZ-hVh" customClass="taCell" customModule="refreshExamp" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="taCell" rowHeight="85" id="qTQ-MV-iaN" customClass="taCell" customModule="refreshExamp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0Ct-RZ-hVh" id="6GI-lf-WDK">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qTQ-MV-iaN" id="dsP-3e-8Sc">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="84.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WHO-sf-dcF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="84.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jVW-eF-ZeD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6Z-cZ-XED">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="84.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QvF-JP-Z5i">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -30,25 +30,25 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="N6Z-cZ-XED" firstAttribute="leading" secondItem="WHO-sf-dcF" secondAttribute="leading" id="D6V-Za-SY4"/>
-                            <constraint firstItem="N6Z-cZ-XED" firstAttribute="top" secondItem="WHO-sf-dcF" secondAttribute="top" id="DFn-7M-DNZ"/>
-                            <constraint firstAttribute="trailing" secondItem="N6Z-cZ-XED" secondAttribute="trailing" id="oo1-1R-TpA"/>
-                            <constraint firstAttribute="height" constant="84.5" id="vxX-bn-ZNp"/>
-                            <constraint firstAttribute="bottom" secondItem="N6Z-cZ-XED" secondAttribute="bottom" id="zVV-uz-19y"/>
+                            <constraint firstItem="QvF-JP-Z5i" firstAttribute="top" secondItem="jVW-eF-ZeD" secondAttribute="top" id="Mby-lq-MZu"/>
+                            <constraint firstItem="QvF-JP-Z5i" firstAttribute="leading" secondItem="jVW-eF-ZeD" secondAttribute="leading" id="RC3-oo-kOJ"/>
+                            <constraint firstAttribute="bottom" secondItem="QvF-JP-Z5i" secondAttribute="bottom" id="e2X-Dv-yBB"/>
+                            <constraint firstAttribute="height" constant="84" id="hfg-S2-bKt"/>
+                            <constraint firstAttribute="trailing" secondItem="QvF-JP-Z5i" secondAttribute="trailing" id="rG5-Hg-gA9"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="WHO-sf-dcF" secondAttribute="trailing" id="BUO-rd-Vqe"/>
-                    <constraint firstAttribute="bottom" secondItem="WHO-sf-dcF" secondAttribute="bottom" id="OI9-RF-6MM"/>
-                    <constraint firstItem="WHO-sf-dcF" firstAttribute="leading" secondItem="6GI-lf-WDK" secondAttribute="leading" id="oNd-sc-m1F"/>
-                    <constraint firstItem="WHO-sf-dcF" firstAttribute="top" secondItem="6GI-lf-WDK" secondAttribute="top" id="sKs-lj-FVk"/>
+                    <constraint firstItem="jVW-eF-ZeD" firstAttribute="top" secondItem="dsP-3e-8Sc" secondAttribute="top" id="9ae-7w-lQ6"/>
+                    <constraint firstItem="jVW-eF-ZeD" firstAttribute="leading" secondItem="dsP-3e-8Sc" secondAttribute="leading" id="OD8-n5-ZsH"/>
+                    <constraint firstAttribute="trailing" secondItem="jVW-eF-ZeD" secondAttribute="trailing" id="dgy-od-F7g"/>
+                    <constraint firstAttribute="bottom" secondItem="jVW-eF-ZeD" secondAttribute="bottom" id="fNP-hb-fdN"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="titleLabel" destination="N6Z-cZ-XED" id="Aj0-xS-8bW"/>
+                <outlet property="titleLabel" destination="QvF-JP-Z5i" id="arN-YC-6nN"/>
             </connections>
-            <point key="canvasLocation" x="155.5" y="-100.5"/>
+            <point key="canvasLocation" x="123" y="-252"/>
         </tableViewCell>
     </objects>
 </document>
